adding controller and dependencies
